--- a/style.css
+++ b/style.css
@@ -1,4 +1,5 @@
 /* Images created by: https://unsplash.com/@pawel_czerwinski */
+@import url('https://fonts.googleapis.com/css2?family=Rowdies:wght@400;700&display=swap');
 
 html {
   box-sizing: border-box;
@@ -11,19 +12,32 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
-
+  font-family: Rowdies, sans-serif;
   font-size: 12px;
 }
 
-
+.player-container1 {
+  height: 500px;
+  width: 400px;
+  background: #c7d0e1;
+  border-radius: 20px;
+  box-shadow: 0 15px 30px 5px rgba(0,0,0, 0.3);
+}
 
 .img-container {
-
+  height: 300px;
+  width: 300px;
   position: relative;
   top: -50px;
   left: 50px;
 }
 
+.img-container img {
+  height: 100%;
+  width: 100%;
+  object-fit: cover;
+  box-shadow: 0 5px 30px 5px rgba(0,0,0, 0.3);
+}
 
 h2 {
   font-size: 25px;
