--- a/style.css
+++ b/style.css
@@ -16,10 +16,10 @@ body {
   font-size: 12px;
 }
 
-.player-container1 {
+.player-container {
   height: 500px;
   width: 400px;
-  background: #c7d0e1;
+  background: #e7e7e7;
   border-radius: 20px;
   box-shadow: 0 15px 30px 5px rgba(0,0,0, 0.3);
 }
@@ -36,8 +36,9 @@ body {
   height: 100%;
   width: 100%;
   object-fit: cover;
-  box-shadow: 0 5px 30px 5px rgba(0,0,0, 0.3);
+  box-shadow: 0 5px 30px 5px rgba(0,0,0, 0.5);
 }
+
 
 h2 {
   font-size: 25px;
@@ -103,7 +104,9 @@ h3 {
 
 /* Media Query: iPhone (Vertical) */
 @media screen and (max-width: 376px) {
-
+  .player-container {
+    width: 95vw;
+  }
 
   .img-container {
     left: 29px;
