--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-/* Images created by: https://unsplash.com/@pawel_czerwinski */
+/* Images created by: https://unsplash.com/@impatrickt | https://unsplash.com/@oortnerphoto | https://unsplash.com/@pixelatelier | https://unsplash.com/@ninjason  */
 @import url('https://fonts.googleapis.com/css2?family=Rowdies:wght@400;700&display=swap');
 
 html {
