--- a/style.css
+++ b/style.css
@@ -14,6 +14,7 @@ body {
   align-items: center;
   font-family: Rowdies, sans-serif;
   font-size: 12px;
+  background-image: linear-gradient(to top, #fbc2eb 0%, #a6c1ee 100%);
 }
 
 .player-container {
